feat(notifications): Build notification system
- write tests for notification class
- write notification database model and migrations
- write notification model class
- link up notification with necessary controllers
- port branch to current local

[Maintains #167749961]
