# src/config/swagger.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "description": "Documentation to test the endpoints for the Barefoot Normad API"
   },
-  "host": "localhost:5000",
+  "host": "localhost:4000",
   "basePath": "/api/v1",
   "tags": [
     {
@@ -26,10 +26,10 @@
     }
   },
   "paths": {
-    "/users/signup": {
+    "/user/signup": {
       "post": {
         "tags": ["auth"],
-        "summary": "Creates a new user",
+        "summary": "Create a new user",
         "description": "This endpoint registers a new user",
         "operationId": "createUser",
         "consumes": ["application/json"],
@@ -62,50 +62,44 @@
         }
       }
     },
-    "/users/signin": {
-      "post": {
+    "/users/verifyEmail/:token": {
+      "get": {
         "tags": ["auth"],
-        "summary": "Signs in a verified user",
-        "description": "This endpoint signs in a verified user",
-        "operationId": "loginUser",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
+        "summary": "Verify email",
+        "description": "This endpoint verify a new user's email address",
+        "operationId": "verifyUser",
+        "consumes": ["string"],
+        "produces": "Update database",
         "security": [],
         "parameters": [
           {
-            "in": "body",
-            "name": "body",
-            "description": "Information needed for login",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Signin"
-            }
+            "in": "email",
+            "name": "token",
+            "description": "Contains email and id",
+            "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "Login successful.",
-            "schema": {
-              "$ref": "#/definitions/AuthResponse"
-            }
-          },
-          "404": {
-            "description": "Your email cannot be found in our database."
-          },
-          "401": {
-            "description": "Your password is incorrect."
+            "description": "Your account has been verified"
           }
         }
       }
     },
     "/requests": {
       "post": {
-        "tags": ["request"],
+        "tags": [
+          "request"
+        ],
         "summary": "Book a travel request",
         "description": "This endpoint books a one-way trip request",
         "operationId": "bookTrip",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
         "security": [
           {
             "Bearer": []
@@ -133,7 +127,120 @@
             "description": "departureDate is required"
           },
           "409": {
-            "description": "you already have a trip booked around this period, you may choose to cancel and make a multi-city request"
+            "description": "You already have a trip slated for this day you may choose to make a multi-city request"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "request"
+        ],
+        "summary": "a user can view all request he/she made",
+        "description": "This end point display all request made by a user",
+        "produces": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Trip requests retrieved successfully",
+            "schema": {
+              "$ref": "#/definitions/RequestResponse"
+            }
+          },
+          "404": {
+            "description": "You are yet to book a make a trip request"
+          }
+        }
+      }
+    },
+    "/user/profile/{email}": {
+      "patch": {
+        "tags": ["user profile"],
+        "summary": "Update user profile",
+        "description": "This endpoint updates a user profile",
+        "operationId": "updateProfile",
+        "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "description": "user email",
+            "schema": {
+              "type": "string",
+              "format": "email"
+            }
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Information needed to update a user",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UserProfile"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "user account updated successfully",
+            "schema": {
+              "$ref": "#/definitions/UserProfileResponse"
+            }
+          },
+          "400": {
+            "description": "email is required, and should follow this format: myemail@domain.com"
+          },
+          "500": {
+            "description": "database error"
+          }
+        }
+      },
+      "get": {
+        "tags": ["user profile"],
+        "summary": "Retrieve user profile",
+        "description": "This endpoint retrieve a user profile",
+        "operationId": "retrieveProfile",
+        "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "description": "user email",
+            "schema": {
+              "type": "string",
+              "format": "email"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "user account retrieved successfully",
+            "schema": {
+              "$ref": "#/definitions/UserProfileResponse"
+            }
+          },
+          "400": {
+            "description": "email is required, and should follow this format: myemail@domain.com"
+          },
+          "500": {
+            "description": "database error"
           }
         }
       }
@@ -204,6 +311,38 @@
         }
       }
     },
+    "UserProfile": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "phoneNumber": {
+          "type": "string"
+        },
+        "gender": {
+          "type": "string"
+        },
+        "preferredLanguage": {
+          "type": "string"
+        },
+        "birthDate": {
+          "type": "string"
+        },
+        "address": {
+          "type": "string"
+        },
+        "department": {
+          "type": "string"
+        },
+        "lineManager": {
+          "type": "string"
+        }
+      }
+    },
     "BookTrip": {
       "type": "object",
       "properties": {
@@ -215,9 +354,16 @@
         },
         "type": {
           "type": "string",
-          "enum": ["one-way", "return"]
+          "enum": [
+            "one-way",
+            "return"
+          ]
         },
         "departureDate": {
+          "type": "string",
+          "format": "date"
+        },
+        "returnDate": {
           "type": "string",
           "format": "date"
         },
@@ -240,6 +386,9 @@
           "items": {
             "properties": {
               "token": {
+                "type": "string"
+              },
+              "email": {
                 "type": "string"
               },
               "id": {
@@ -276,23 +425,23 @@
               "destination": {
                 "type": "string"
               },
+              "type": {
+                "type": "string",
+                "enum": ["one-way", "return"]
+              },
               "departureDate": {
                 "type": "string",
                 "format": "date"
               },
-              "type": {
+              "returnDate": {
                 "type": "string",
-                "enum": ["one-way", "return"]
+                "format": "date"
               },
               "reason": {
                 "type": "string"
               },
               "accommodation": {
                 "type": "string"
-              },
-              "status": {
-                "type": "string",
-                "enum": ["open", "closed"]
               }
             }
           }
