# src/routes/userRoute.js
@@ -2,20 +2,21 @@ import express from 'express';
 import UserController from '../controllers/UserController';
 import validation from '../middlewares/validation';
 import userValidations from '../middlewares/userValidations';
+import Auth from '../middlewares/Auth';
 
 const userRoute = express.Router();
-const { validate } = validation;
+const { validate, validateEmail } = validation;
 
 userRoute.post(
   '/users/signup',
-  validate('signup'),
+  validation.validate('signup'),
   userValidations.emailExists,
   UserController.signup
 );
 
 userRoute.post(
   '/users/signin',
-  validate('signin'),
+  validation.validate('signin'),
   userValidations.validateLogin,
   UserController.signin
 );
@@ -25,8 +26,28 @@ userRoute
   .get('/users/reset/:token', UserController.updatePassword)
   .patch(
     '/users/reset/:token',
-    validate('updatePassword'),
+    validation.validate('updatePassword'),
     UserController.updatePassword
   );
+
+userRoute.get(
+  '/users/verifyEmail/:token',
+  UserController.verifyUserEmail
+);
+
+userRoute.get(
+  '/users/profile/:email',
+  validateEmail('emailParam'),
+  Auth.userAuth,
+  UserController.retrieveUserProfile
+);
+
+userRoute.patch(
+  '/users/profile/:email',
+  validateEmail('emailParam'),
+  validate('profile'),
+  Auth.userAuth,
+  UserController.updateUserProfile
+);
 
 export default userRoute;
